--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,49 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 }
 
+body {
+  margin: 0;
+}
+
+figure {
+  margin: 0;
+}
+
+p {
+  font-family: "Georgia", serif;
+}
+
+h2 {
+  font-family: 'Denk One', sans-serif;
+  margin: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+figcaption {
+  background-color: #e2e2e2;
+  padding: 1em;
+  display: inline-block;
+  font-size: 100%;
+  line-height: 1.3;
+}
+
 *, *::before, *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+@media query {
+
+}
+
 }
