--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font: normal 100%/1.3 Georgia, serif;
 }
 
 body {
@@ -20,34 +21,65 @@ figure {
   margin: 0;
 }
 
-p {
-  font-family: "Georgia", serif;
-}
-
 h2 {
-  font-family: 'Denk One', sans-serif;
+  font-family: "Denk One", sans-serif;
   margin: 0;
+  font-size: 1.5rem;
 }
 
-img {
-  display: block;
+.img-flex {
   width: 100%;
+  display: block;
 }
 
 figcaption {
   background-color: #e2e2e2;
   padding: 1em;
   display: inline-block;
-  font-size: 100%;
-  line-height: 1.3;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-@media query {
+@media only screen and (min-width: 38em) {
+
+  figure {
+    position: relative;
+  }
+
+  img {
+    position: relative;
+  }
+
+  figcaption {
+    position: absolute;
+    max-width: 20em;
+    border-radius: .5em;
+    color: #fff;
+    background-color: rgba(0, 0, 0, .3);
+    right: 1em;
+    top: 10em;
+    font-size: 110%;
+    line-height: 1.4;
+  }
 
 }
 
+@media only screen and (min-width: 60em) {
+
+  figcaption {
+    font-size: 120%;
+    line-height: 1.5;
+    top: 16em;
+  }
+}
+
+@media only screen and (min-width: 90em) {
+
+  figcaption {
+    font-size: 130%;
+    line-height: 1.5;
+    top: 26em;
+  }
 }
